@@ -70,7 +70,7 @@ type SortedConnections []struct {
 
 // Returns the slowest peers first
 // Make suure to call it with locked Mutex_net
-func GetSortedConnections() (list SortedConnections, any_ping bool) {
+func GetSortedConnections() (list SortedConnections, any_ping bool, segwit_cnt int) {
 	var cnt int
 	var now time.Time
 	var tlist SortedConnections
@@ -92,6 +92,10 @@ func GetSortedConnections() (list SortedConnections, any_ping bool) {
 		if tlist[cnt].Ping > 0 {
 			any_ping = true
 		}
+		if (v.Node.Services&SERVICE_SEGWIT) != 0 {
+			segwit_cnt++
+		}
+
 		cnt++
 	}
 	if cnt > 0 {
@@ -138,17 +142,22 @@ func GetSortedConnections() (list SortedConnections, any_ping bool) {
 func drop_worst_peer() bool {
 	var list SortedConnections
 	var any_ping bool
+	var segwit_cnt int
 
 	Mutex_net.Lock()
 	defer Mutex_net.Unlock()
 
-	list, any_ping = GetSortedConnections()
+	list, any_ping, segwit_cnt = GetSortedConnections()
 	if !any_ping { // if "list" is empty "any_ping" will also be false
 		return false
 	}
 
 	for _, v := range list {
 		if v.MinutesOnline < OnlineImmunityMinutes {
+			continue
+		}
+		if common.CFG.Net.MinSegwitCons > 0 && segwit_cnt <= int(common.CFG.Net.MinSegwitCons) &&
+			(v.Conn.Node.Services&SERVICE_SEGWIT) != 0 {
 			continue
 		}
 		if v.Conn.X.Incomming {
