@@ -149,7 +149,7 @@ Note that the current satoshi client has a "feature" that causes it to refuse co
 <tr class="odd">
 <td class="cfg_name"> Net.MinSegwitCons</td>
 <td class="cfg_type"> uint32</td>
-<td> 0</td>
+<td> 4</td>
 <td class="cfg_info"> Maintain at least so many connections to nodes indicating support for Segregated Witness (via bit 0x8 in Services).</td>
 
 <tr class="even">
